# chps

./: kit-survie.md
compil/: README.md  helloworld.cpp
compil/exemple_1/: CMD.txt  CMakeLists.txt  bar.cpp  bar.h  foo.h  main.cpp
compil/exemple_2/: CMD.txt
compil/exemple_2/foo/: foo.cpp
deprecated/lab_2/ml/: ref.cpp  test_algebra.cpp
lab_1/ml/: ex1m.cpp
lab_2/ml/: CMakeLists.txt  test_performances.cpp
ml/: CMakeLists.txt  ex1f.cpp  ex2.cpp
pointer/: main.cpp
